--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
+dist: bionic
 language: node_js
 sudo: false
 node_js:
-  - '8'
   - '10'
 before_install:
   - npm install -g grunt-cli
 install: npm install
+
+notifications:
+  email:
+    recipients:
+      - gustavor@loymark.com
+    on_success: always # default: change= never
+    on_failure: always # default: always
